# musif

./: .RData  .Rhistory  .gitignore  .readthedocs.yaml  200_excel.xlsx  200_excel.xlsx.REMOVED.git-id  Did03M-Son_regina-1730-Sarro(1.05)(0006)_SecciónA.xlsx  Did03M-Son_regina-1730-Sarro(1.05)(0006)_SecciónA.xlsx.REMOVED.git-id  Did03M-Son_regina-1730-Sarro(1.05)(0006)_SecciónA_silencios.xlsx  Did03M-Son_regina-1730-Sarro(1.05)(0006)_SecciónA_silencios.xlsx.REMOVED.git-id  Dockerfile  Features_23_05.xlsx.REMOVED.git-id  Features_30_05.xlsx.REMOVED.git-id  Instrumentation.csv  MANIFEST.in  Passions.csv  README.md  analysis.py  analysis_175.csv.REMOVED.git-id  analysis_labeled.csv  analysis_labeled.csv.REMOVED.git-id  arias_test.csv  arias_test.csv.REMOVED.git-id  ariatest_Did03M_[1.04][0043].csv  clave corpus repo.txt  clefs2.csv  columns.txt  config.py  config.yml  config_example.yml  config_extraction_example.yml  config_postprocess_example.yml  config_tests.yml  data.csv  datitos.csv  datitos.csv.REMOVED.git-id  developing.py  developing2.py  difference.txt  errors.csv  (+97 more)
arias/: Dem01M-O_piu-1735-Leo[1.01][0430].xml
config/: didone_config.yml  local_config.yml
danieiba/: 211217-Data Frame Didone.csv.REMOVED.git-id  Arias_proportions.xlsx  Arias_proportions.xlsx.REMOVED.git-id  analysis.csv  analysis.py  analysis2.csv.REMOVED.git-id  analysis3_A.csv  analysis3_A.csv.REMOVED.git-id  analysis3_all.csv  analysis3_all.csv.REMOVED.git-id  analysis3_old.csv  analysis3_old.csv.REMOVED.git-id  analysis4.csv  analysis4.csv.REMOVED.git-id  analysis4_Perez_Galuppi.csv  analysis4_Perez_Galuppi.csv.REMOVED.git-id  analysis_20211214.py  analysis_20211217.csv.REMOVED.git-id  analysis_20211217.py  analysis_internal.py  arias.csv  config.yml  curvature.py  didone_config.yml  didone_main.py  main.py  masters.py  myfeatures.csv.REMOVED.git-id  myfeatures_A.csv.REMOVED.git-id  myfeatures_all.csv.REMOVED.git-id  myfeatures_old.csv.REMOVED.git-id  passions2.csv
data/: arias_clefs.csv  arias_metadata.csv  arias_metadata.csv.REMOVED.git-id  arias_scoring.csv.REMOVED.git-id  clefs_order.json  family_abbreviation.json  key_signature_types_order.json  keys_order.json  modes_order.json  operas.csv  role_genders_order.json  roles_order.json  sorting_lists.json.REMOVED.git-id  (+6 more)
(+692 files in other folders)
