[project]
dependencies = [
    'pandas>=1.3.3',
    'tqdm>=4.56.0',
    'ms3>=1.2.0',
    'pyyaml>=5.4.1',
    'roman>=3.3',
    'openpyxl>=3.0.6',
    'matplotlib>=3.3.4',
    'joblib>=1.0.0',
    'scipy>=1.6.0',
    'music21>=8,<9',
    # music21 has a different version for each python 3.*
    "deepdiff>=6.2.1",
]
name = "musif"
version = "0.1.0"
description = "Music feature extraction library from the DIDONE project"
authors = [{ name = "Didone Project", email = "didone@iccmu.es" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[tool.pdm.build]
# includes = ["musif/py.typed", "musif/**"]

[tool.pdm.dev-dependencies]
dev = []
